@@ -3,14 +3,10 @@ from datetime import datetime
 from tempfile import NamedTemporaryFile
 
 from django.conf import settings
-from django.contrib import messages
 from django.contrib.sessions.models import Session
 from django.core.management import call_command
 from django.db import connection, transaction
-from django.urls import reverse
 from django.utils import timezone
-from django.utils.html import format_html, mark_safe
-from django.utils.translation import gettext as _
 
 from activities.models import Course
 from celery import shared_task
@@ -26,35 +22,10 @@ from .models import Domain, YearTenant
 
 logger = get_task_logger(__name__)
 
-"""
-from django.db import connection, transaction
-from django.utils.timezone import now
-
-from backend.models import YearTenant, Domain
-
-start=end=now()
-
-
-destination_tenant, created = YearTenant.objects.get_or_create(
-        schema_name='period_{}_{}'.format(
-            start.strftime('%Y%m%d'),
-            end.strftime('%Y%m%d')
-        ),
-        defaults={
-            'start_date': start,
-            'end_date': end,
-            'status': YearTenant.STATUS.creating
-        }
-    )
-destination_tenant.create_schema(check_if_exists=True)
-"""
-
 
 @shared_task
 @respects_language
-def create_tenant(
-    start, end, copy_activities_from_id=None, copy_children_from_id=None, user_id=None
-):
+def create_tenant(start, end, copy_activities_from_id=None, copy_children_from_id=None, user_id=None):
     start = datetime.strptime(start, "%Y-%m-%d").date()
     end = datetime.strptime(end, "%Y-%m-%d").date()
     connection.set_schema_to_public()
@@ -71,7 +42,7 @@ def create_tenant(
         )
         Domain.objects.get_or_create(
             tenant=destination_tenant,
-            domain="%s-%s" % (start.strftime("%Y%m%d"), end.strftime("%Y%m%d")),
+            domain="{}-{}".format(start.strftime("%Y%m%d"), end.strftime("%Y%m%d")),
         )
     try:
         user = FamilyUser.objects.get(pk=user_id)
@@ -118,9 +89,7 @@ def create_tenant(
             logger.debug("Set all courses to not up-to-date in destination")
 
         except YearTenant.DoesNotExist:
-            logger.warning(
-                "Year tenant {} (source) does not exist".format(copy_activities_from_id)
-            )
+            logger.warning(f"Year tenant {copy_activities_from_id} (source) does not exist")
 
     if copy_children_from_id:
         logger.info("Beginning copy of children")
@@ -149,7 +118,7 @@ def create_tenant(
             f = NamedTemporaryFile(suffix=".json", delete=False)
             call_command("dumpdata", "registrations.Child", output=f.name)
             f.close()
-            logger.debug("Dumped children from source: {}".format(f.name))
+            logger.debug(f"Dumped children from source: {f.name}")
 
             connection.set_tenant(destination_tenant)
             call_command("loaddata", f.name)
@@ -165,7 +134,7 @@ def create_tenant(
             logger.debug("Set all children to not up-to-date in destination")
 
         except YearTenant.DoesNotExist:
-            logger.warning("Year tenant {} (source) does not exist".format(copy_children_from_id))
+            logger.warning(f"Year tenant {copy_children_from_id} (source) does not exist")
 
     if settings.KEPCHUP_ENABLE_PAYROLLS:
         try:
@@ -187,9 +156,7 @@ def create_tenant(
                 )
             )
         except YearTenant.DoesNotExist:
-            logger.warning(
-                "Year tenant {} (source) does not exist".format(copy_activities_from_id)
-            )
+            logger.warning(f"Year tenant {copy_activities_from_id} (source) does not exist")
 
     destination_tenant.status = YearTenant.STATUS.ready
     destination_tenant.save()
@@ -198,17 +165,17 @@ def create_tenant(
             destination_tenant.start_date.isoformat(), destination_tenant.end_date.isoformat()
         )
     )
-    if user:
-        msg = _(
-            "The period %(start)s-%(end)s is ready to be used. "
-            "You can preview it at the %(link_start)speriod management interface%(link_end)s."
-        )
-        params = {
-            "start": destination_tenant.start_date.isoformat(),
-            "end": destination_tenant.end_date.isoformat(),
-            "link_start": format_html('<a href="{}">', reverse("backend:year-list")),
-            "link_end": format_html("</a>"),
-        }
+    # if user:
+    #     msg = _(
+    #         "The period %(start)s-%(end)s is ready to be used. "
+    #         "You can preview it at the %(link_start)speriod management interface%(link_end)s."
+    #     )
+    #     params = {
+    #         "start": destination_tenant.start_date.isoformat(),
+    #         "end": destination_tenant.end_date.isoformat(),
+    #         "link_start": format_html('<a href="{}">', reverse("backend:year-list")),
+    #         "link_end": format_html("</a>"),
+    #     }
 
 
 @shared_task
@@ -218,9 +185,7 @@ def update_current_tenant():
     now = timezone.now()
     current_domain = Domain.objects.filter(is_current=True).first()
     possible_new_tenants = (
-        YearTenant.objects.filter(
-            start_date__lte=now, end_date__gte=now, status=YearTenant.STATUS.ready
-        )
+        YearTenant.objects.filter(start_date__lte=now, end_date__gte=now, status=YearTenant.STATUS.ready)
         .exclude(domains=current_domain)
         .order_by("start_date", "end_date")
     )
@@ -237,13 +202,13 @@ def update_current_tenant():
         # log out everyone
         Session.objects.all().delete()
 
-        for user in FamilyUser.objects.filter(is_active=True, is_manager=True):
-            msg = _("The active period has been automatically changed to %(start)s - %(end)s")
-            params = {
-                "start": new_domain.tenant.start_date.isoformat(),
-                "end": new_domain.tenant.end_date.isoformat(),
-            }
-            # messages.info(user, msg % params)
+        # for user in FamilyUser.objects.filter(is_active=True, is_manager=True):
+        #     msg = _("The active period has been automatically changed to %(start)s - %(end)s")
+        #     params = {
+        #         "start": new_domain.tenant.start_date.isoformat(),
+        #         "end": new_domain.tenant.end_date.isoformat(),
+        #     }
+        #     # messages.info(user, msg % params)
 
         connection.set_tenant(new_domain.tenant)
 
@@ -253,20 +218,20 @@ def update_current_tenant():
 def import_children(filepath, tenant_id, user_id=None):
     tenant = YearTenant.objects.get(pk=tenant_id)
     connection.set_tenant(tenant)
-    with open(filepath) as filelike:
+    with open(filepath, "rb") as filelike:
         try:
             (nb_created, nb_updated) = load_children(filelike)
-            status = messages.constants.SUCCESS
-            message = _(
-                "Children import successful. "
-                "%(added)s children have been added, %(updated)s have been updated"
-            ) % {"added": nb_created, "updated": nb_updated}
+            # status = messages.constants.SUCCESS
+            # message = _(
+            #     "Children import successful. " "%(added)s children have been added, %(updated)s have been updated"
+            # ) % {"added": nb_created, "updated": nb_updated}
         except ValueError as err:
-            status = messages.constants.ERROR
-            message = err.message
+            # status = messages.constants.ERROR
+            # message = err
+            logger.exception("Error while importing children", exc_info=err)
 
-    try:
-        user = FamilyUser.objects.get(pk=user_id)
-        # message_user(user, message, status)
-    except FamilyUser.DoesNotExist:
-        pass
+    # try:
+    #     user = FamilyUser.objects.get(pk=user_id)
+    #     # message_user(user, message, status)
+    # except FamilyUser.DoesNotExist:
+    #     pass
